# x2x

./: .gitignore  .hgignore  AUTHORS  COPYING  COPYING.win32  ChangeLog  ChangeLog.old  Changes  INSTALL  Imakefile  Makefile  Makefile.am  README  README.md  bootstrap.sh  configure.ac  format.c  format.h  keymap.c  keymap.h  lawyerese.c  resource.h  winmsg.c  x2x.1  x2x.c  x2x.man  x2xwin.rc
CYGWIN-PATCHES/: setup.hint  x2x-1.27.README
debian/: .gitignore  changelog  control  copyright  errorhandler.diff  gbp.conf  process  rules
debian/upstream/: metadata
docs/: HostBasedAuthentication.txt  MIT-MAGIC-COOKIE-1.txt  SshTunneling.txt  X2xUsage.txt
